# Financial_Analyst

./: README.md
financial-analyst-agent/: .gitignore  README.md  REFLECTION.md  SAMPLE_CONVERSATIONS.md  pyproject.toml  test_gemini.py
financial-analyst-agent/backend/: README.md
financial-analyst-agent/backend/agents/: README.md  graph.py  nodes.py  prompts.py  state.py
financial-analyst-agent/backend/agents/tools/: pandas_tool.py  vector_tool.py
financial-analyst-agent/backend/api/: README.md  dependencies.py  endpoints.py  main.py  schemas.py
financial-analyst-agent/backend/core/: README.md  config.py
financial-analyst-agent/backend/database/: README.md  chroma_client.py  interfaces.py
financial-analyst-agent/backend/ingestion/: README.md  parser.py  pipeline.py
financial-analyst-agent/backend/utils/: README.md  excel_generator.py  pdf_generator.py
financial-analyst-agent/data/: README.md
financial-analyst-agent/frontend/: README.md  app.py
financial-analyst-agent/frontend/components/: chat_interface.py  sidebar.py
financial-analyst-agent/frontend/web/: README.md  package-lock.json  package.json  tailwind.config.ts
financial-analyst-agent/frontend/web/src/app/: globals.css  layout.tsx
financial-analyst-agent/frontend/web/src/components/: ChatInterface.tsx  ChatMessage.tsx  ProgressIndicator.tsx  Sidebar.tsx
financial-analyst-agent/frontend/web/src/lib/: api.ts  sessions.ts
financial-analyst-agent/frontend/web/src/types/: index.ts
financial-analyst-agent/scripts/: README.md  run_server.sh  run_ui.sh  test_agent.py
financial-analyst-agent/tests/: README.md
financial-analyst-agent/tests/evaluation/: README.md  evaluator.py  golden_dataset.json  metrics.py  run_eval.py
financial-analyst-agent/tests/evaluation/results/: eval_20260517_133949.json
