[project]
name = "financial-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "llama-parse>=0.6.94",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]
